# rasterization-demo

./: .project  CMakeLists.txt  build.bat  build_run.bat  cmake_sync.bat  main.c  notes.txt  run.bat  stb_truetype.h  stbtt_impl.c  typedefs.h
lib/glad/: glad.c  glad.h  khrplatform.h
lib/glfw/: CMakeLists.txt
lib/glfw/CMake/: GenerateMappings.cmake  i686-w64-mingw32-clang.cmake  i686-w64-mingw32.cmake  x86_64-w64-mingw32-clang.cmake  x86_64-w64-mingw32.cmake
lib/glfw/CMake/modules/: FindWaylandProtocols.cmake
lib/glfw/include/GLFW/: glfw3.h  glfw3native.h
lib/glfw/src/: CMakeLists.txt  cocoa_init.m  cocoa_joystick.h  cocoa_joystick.m  cocoa_monitor.m  cocoa_platform.h  cocoa_time.c  cocoa_window.m  context.c  egl_context.c  egl_context.h  glfw_config.h.in  glx_context.c  glx_context.h  init.c  input.c  internal.h  linux_joystick.c  linux_joystick.h  mappings.h  mappings.h.in  monitor.c  nsgl_context.h  nsgl_context.m  null_init.c  null_joystick.c  null_monitor.c  null_platform.h  null_window.c  osmesa_context.c  osmesa_context.h  posix_thread.c  posix_thread.h  posix_time.c  posix_time.h  vulkan.c  wgl_context.c  wgl_context.h  win32_init.c  win32_joystick.c  (+16 more)
lib/simplex/: FastNoiseLite.h
shaders/: bary.gsh  color.fsh  lines.gsh  lines_transition.fsh  lit.fsh  noop.fsh  noop.vsh  norm.fsh  norm.vsh  points.gsh  vp.vsh
